--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -24,7 +24,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <h1>Student CRUD Operations</h1>
+        <a href="/students" class="text-decoration-none"><h1>Student Management System</h1></a>
         <div class="d-flex">
             <button class="btn btn-primary" type="submit">Logout</button>
         </div>
@@ -38,20 +38,21 @@
 
     <h2 class="navbar-brand">Add Student</h2>
 
-    <form action="#" method="post">
+    <form th:action="@{save}" method="post" th:object="${student}">
+
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName"
+            <input type="text" class="form-control" id="firstName" name="firstName" th:value="*{firstName}"
                    placeholder="First Name of the Student" />
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName"
+            <input type="text" class="form-control" id="lastName" name="lastName" th:value="*{lastName}"
                    placeholder="Last Name of the Student" />
         </div>
 
         <input type="submit" class="btn btn-success" value="Add" />
-        <a href="#" class="btn btn-outline-secondary">Cancel</a>
+        <a href="students" class="btn btn-outline-secondary">Cancel</a>
     </form>
 </div>
 </body>
