--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -24,7 +24,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <h1>Student CRUD Operations</h1>
+        <a href="/students" class="text-decoration-none"><h1>Student Management System</h1></a>
         <div class="d-flex">
             <button class="btn btn-primary" type="submit">Logout</button>
         </div>
@@ -38,22 +38,25 @@
 
     <h2 class="navbar-brand">Student Details</h2>
 
-    <div class="alert alert-danger" role="alert">
-        Student not found
+    <div th:if="${student.id == null}">
+        <div class="alert alert-danger" role="alert" th:text="'Student with Id[' + ${id} + '] not found'">
+            Student not found
+        </div>
+        <a href="students" class="btn btn-outline-secondary">Go Back</a>
     </div>
 
-    <form action="#" method="post">
+    <div th:if="${student.id != null}" th:object="${student}">
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" disabled="true" />
+            <input type="text" class="form-control" id="firstName" disabled="true" th:value="*{firstName}" />
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" disabled="true" />
+            <input type="text" class="form-control" id="lastName" disabled="true" th:value="*{lastName}" />
         </div>
 
-        <a href="#" class="btn btn-outline-secondary">Cancel</a>
-    </form>
+        <a href="students" class="btn btn-outline-secondary">Go Back</a>
+    </div>
 </div>
 </body>
 
