--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -26,7 +26,10 @@
     <div class="container-fluid">
         <a href="/students" class="text-decoration-none"><h1>Student Management System</h1></a>
         <div class="d-flex">
-            <button class="btn btn-primary" type="submit">Logout</button>
+            <form action="/logout" method="POST">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <input type="submit" class="btn btn-primary" value="Logout" />
+            </form>
         </div>
     </div>
 </nav>
